2012-05-10      Stephan Linz <linz@li-pro.net>

	* common: initial version Avnet-S6LX150T-MMU-lite-13.2
	* xlbsp: correct phy definition
