@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Thursday, the 10 of May, 2012; 19:40:52
+# Today is: Thursday, the 10 of May, 2012; 22:30:08
 #
 # Description: Linux 2.4 Configurations
 #
@@ -267,10 +267,10 @@ define_int CONFIG_XILINX_INTC_0_SPLB_NUM_MASTERS 2
 define_int CONFIG_XILINX_INTC_0_SPLB_MID_WIDTH 1
 define_int CONFIG_XILINX_INTC_0_SPLB_NATIVE_DWIDTH 32
 define_int CONFIG_XILINX_INTC_0_SPLB_SUPPORT_BURSTS 0
-define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 6
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111111001111
+define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 8
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111100011101
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
-define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
+define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111101
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
 define_int CONFIG_XILINX_INTC_0_HAS_SIE 1
 define_int CONFIG_XILINX_INTC_0_HAS_CIE 1
@@ -281,9 +281,11 @@ define_string CONFIG_XILINX_INTC_0_HW_VER 2.01.a
 define_string CONFIG_XILINX_INTC_0_INSTANCE xps_intc_0
 # mbref_mio_0_IP2INTC_Irpt
 # mbref_reg_0_IP2INTC_Irpt
+# xps_iic_0_IIC2INTC_Irpt
 # xps_uart_1_Interrupt
 # xps_uart_0_Interrupt
 # xps_ether_0_IP2INTC_Irpt
+# fpga_0_RTC_Int_pin
 # xps_timer_0_Interrupt
 
 # Timer is xps_timer_0
