@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Thursday, the 10 of May, 2012; 19:40:52
+# Today is: Thursday, the 10 of May, 2012; 22:30:08
 #
 # Description: U-Boot Configurations
 #
@@ -38,8 +38,6 @@ PLATFORM_CPPFLAGS += -mcpu=v8.20.a
 
 # Automatic U-Boot position at 0x27e00000
 CONFIG_SYS_TEXT_BASE = 0x27e00000
-
-# I2C controller not defined
 
 # Sysace CF controller not defined
 
