@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Thursday, the 10 of May, 2012; 19:40:54
+ * Today is: Thursday, the 10 of May, 2012; 22:30:10
  *
  * XPS project directory: Avnet-S6LX150T-MMU-lite-13.2
  */
@@ -201,7 +201,7 @@
 		mbref_mio_0: uio@80400000 {
 			compatible = "xlnx,plbv46-mbref-mio-1.00.a", "generic-uio";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 5 2 >;
+			interrupts = < 7 2 >;
 			reg = < 0x80400000 0x10000 0x80410000 0x200 0x80411000 0x200 0x80412000 0x200 0x80413000 0x200 >;
 			xlnx,family = "spartan6";
 			xlnx,include-dphase-timer = <0x1>;
@@ -209,7 +209,7 @@
 		mbref_reg_0: uio@80800000 {
 			compatible = "xlnx,plbv46-mbref-reg-1.00.a", "generic-uio";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 4 2 >;
+			interrupts = < 6 2 >;
 			reg = < 0x80800000 0x10000 >;
 			xlnx,family = "spartan6";
 			xlnx,include-dphase-timer = <0x1>;
@@ -315,8 +315,8 @@
 			compatible = "xlnx,xps-ethernetlite-4.00.a", "xlnx,xps-ethernetlite-1.00.a";
 			device_type = "network";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 1 0 >;
-			local-mac-address = [ 00 0a 35 a6 9e 00 ];
+			interrupts = < 2 0 >;
+			local-mac-address = [ 00 0a 35 52 8d 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x10000 >;
 			xlnx,duplex = <0x1>;
@@ -404,13 +404,26 @@
 			xlnx,tri-default = <0xffffffff>;
 			xlnx,tri-default-2 = <0xffffffff>;
 		} ;
+		xps_iic_0: i2c@80ef0000 {
+			compatible = "xlnx,xps-iic-2.03.a", "xlnx,xps-iic-2.00.a";
+			interrupt-parent = <&xps_intc_0>;
+			interrupts = < 5 2 >;
+			reg = < 0x80ef0000 0x10000 >;
+			xlnx,clk-freq = <0x3f940aa>;
+			xlnx,family = "spartan6";
+			xlnx,gpo-width = <0x1>;
+			xlnx,iic-freq = <0x186a0>;
+			xlnx,scl-inertial-delay = <0x5>;
+			xlnx,sda-inertial-delay = <0x5>;
+			xlnx,ten-bit-adr = <0x0>;
+		} ;
 		xps_intc_0: interrupt-controller@8aff0000 {
 			#interrupt-cells = <0x2>;
 			compatible = "xlnx,xps-intc-2.01.a", "xlnx,xps-intc-1.00.a";
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
-			xlnx,kind-of-intr = <0xf>;
-			xlnx,num-intr-inputs = <0x6>;
+			xlnx,kind-of-intr = <0x1d>;
+			xlnx,num-intr-inputs = <0x8>;
 		} ;
 		xps_timer_0: system-timer@8aef0000 {
 			compatible = "xlnx,xps-timer-1.02.a", "xlnx,xps-timer-1.00.a";
@@ -431,7 +444,7 @@
 			current-speed = <115200>;
 			device_type = "serial";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 2 0 >;
+			interrupts = < 3 0 >;
 			port-number = <0>;
 			reg = < 0x89ff0000 0x10000 >;
 			xlnx,baudrate = <0x1c200>;
@@ -446,7 +459,7 @@
 			current-speed = <115200>;
 			device_type = "serial";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 3 0 >;
+			interrupts = < 4 0 >;
 			port-number = <1>;
 			reg = < 0x89fe0000 0x10000 >;
 			xlnx,baudrate = <0x1c200>;
