@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Thursday, the 10 of May, 2012; 19:40:52
+ * Today is: Thursday, the 10 of May, 2012; 22:30:08
  *
  * Description: U-Boot Configurations
  *
@@ -43,12 +43,14 @@
 
 /* Interrupt controller is xps_intc_0 */
 #define XILINX_INTC_BASEADDR                     0x8AFF0000
-#define XILINX_INTC_NUM_INTR_INPUTS              6
+#define XILINX_INTC_NUM_INTR_INPUTS              8
 /* mbref_mio_0_IP2INTC_Irpt */
 /* mbref_reg_0_IP2INTC_Irpt */
+/* xps_iic_0_IIC2INTC_Irpt */
 /* xps_uart_1_Interrupt */
 /* xps_uart_0_Interrupt */
 /* xps_ether_0_IP2INTC_Irpt */
+/* fpga_0_RTC_Int_pin */
 /* xps_timer_0_Interrupt */
 
 /* System (Timer) Clock Frequency */
@@ -79,7 +81,10 @@
 #define XILINX_UARTLITE_BASEADDR2                0x8FFF0000
 #define XILINX_UARTLITE_BAUDRATE2                115200 /* WARNING: set default */
 
-/* I2C controller not defined */
+/* I2C controller is xps_iic_0 */
+#define XILINX_IIC_0_FREQ                        100000
+#define XILINX_IIC_0_BIT                         0
+#define XILINX_IIC_0_BASEADDR                    0x80EF0000
 
 /* GPIO controller is xps_gpio_3 */
 #define XILINX_GPIO_BASEADDR                     0x80FC0000
