@@ -1,3 +1,7 @@
+2012-05-11      Stephan Linz <linz@li-pro.net>
+
+	* xlbsp: upgrade to lates exports from ISE 13.2
+
 2012-05-10      Stephan Linz <linz@li-pro.net>
 
 	* common: initial version Avnet-S6LX150T-MMU-lite-13.2
